Updated to Java 17