@@ -6,8 +6,8 @@ plugins {
 repositories {
     jcenter()
 }
-sourceCompatibility = JavaVersion.VERSION_12
-targetCompatibility = JavaVersion.VERSION_12
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 dependencies {
 }
@@ -21,9 +21,3 @@ jar {
         )
     }
 }
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-run { jvmArgs(['--enable-preview']) }
